[package]
name = "coldloader"
version = "1.0.0"
edition = "2024"
authors = ["NotAndreh"]

[lib]
name = "coldloader"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.99"
log = { version = "0.4.27", features = ["release_max_level_off"] }
log4rs = "1.3.0"
rust-ini = "0.21.1"
winapi = { version = "0.3.9", features = ["minwindef", "libloaderapi", "processthreadsapi", "winuser"] }
winreg = "0.55.0"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"
